[project]
name = "soap-jax"
version = "0.1.0"
description = "SOAP Optimizer implemented in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax",
    "jaxtyping",
    "optax",
    "flax>=0.12"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "I", "FURB"]
ignore = ["B905"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"